fix: clean code